--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 @import './color_dark.css';
 @import './scrollbar.css';
 @import './icon.css';
+@import './element-style.css';
 
 body {
   overflow: overlay;
