--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 @import './color.css';
 @import './color_dark.css';
-@import './scrollbar.css';
+/* @import './scrollbar.css'; */
 @import './icon.css';
 @import './element-style.css';
 
